Removed phone number

--- a/about/index.html
+++ b/about/index.html
@@ -53,10 +53,10 @@
           <img src="/media/EmailIcon.png" alt="Email" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 3vw;"/>
           <p>&ensp;<a href="mailto:evanpgray.work@gmail.com" style="text-decoration: none; color: inherit;">evanpgray.work@gmail.com</a>&emsp;</p>
         </div>
-        <div class = "item">
+        <!-- <div class = "item">
           <img src="/media/PhoneIcon.png" alt="Phone" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 2vw;"/>
-          <p>&ensp;+1 (425) 213-7629</p>
-        </div>
+          <p>&ensp;+0 (000) 000-0000</p>
+        </div> -->
       </div>
       <div class = "aboutText">
 <p>I am currently pursuing a Bachelor of Science in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology.</p>
