--- a/codesamples/overlap/index.html
+++ b/codesamples/overlap/index.html
@@ -7,32 +7,20 @@
   <!-- ------------------------------------Head------------------------------------ -->
   <!-- ---------------------------------------------------------------------------- -->
   <head>
+    <!-- Connect javascript functions and setup page-->
+    <script type="text/javascript" src="/functions.js"></script>
+    <script> window.addEventListener('load', function() {loadPageDefualts();}); </script>
+
     <title>Evan Gray | Code Samples</title>
 
     <!-- Link to the external stylesheets -->
     <link rel="stylesheet" type="text/css" href="/codesamples/codeSampleStyles.css">
-    <link rel="stylesheet" type="text/css" href="/headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="/footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="/fonts.css">
-
-    <!-- Set icon -->
-    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
-
-    <!-- Connect javascript functions -->
-    <script type="text/javascript" src="/functions.js"></script>
 
     <!-- Link to the google code-prettify library styles -->
     <script type="text/javascript" src="/googlePrettify/prettify.js"></script>
 
-    <!-- Load footer into this file-->
-    <!-- Also Load code snippets on page load and run prettify on them -->
-    <script> 
-      window.onload = function() 
-      {
-        loadCode('overlap.cpp');
-        loadHTML('/footer.html');
-      }; 
-    </script>
+    <!-- Load code snippets on page load and run prettify on them -->
+    <script>  window.addEventListener('load', function() {loadCode('overlap.cpp');}); </script>
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -40,21 +28,6 @@
   <!-- ---------------------------------------------------------------------------- -->
 
   <body>
-    <!-- ~~~~~~~~~~~Header~~~~~~~~~~~ -->
-    <div class = "header" style="background-color: black;">
-      <div class = "title">
-        Evan Gray       
-      </div>
-      <div class = "buttons">
-        <button class= " button" onclick = "window.location.href = '/'">Projects</button>
-        <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
-        <button class= " button" onclick = "location.reload()">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = '/about/'">About</button>
-        <button class= " button" onclick = "scrollToFooter()">Contact</button>
-      </div>
-      <hr class="header-line">
-    </div>
-
     <!-- ~~~~~~~~~~~Tabs~~~~~~~~~~ -->
     <div class = "tabrow">
       <button class = "tabinactive" onclick = "window.location.href = '/codesamples/opengl-computeshader'">
@@ -120,11 +93,6 @@
 <h3>Output:</h3>
 <div class="inset"><p>The final output is a map where the keys are overlap counts and the values indicate the total area covered by those counts, modulo 7001. (e.g., 500 cells with 0 overlaps, 230 cells with 1 overlap, ect.) This approach ensures the solution is scalable and avoids unnecessary computations.</p></div>
       </div>
-    </div>
-
-    <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="/footer.html">
-      <!--Footer will get autoloaded here :D -->
     </div>
   </body>
 </html>
