--- a/projects/knightlight/index.html
+++ b/projects/knightlight/index.html
@@ -7,28 +7,14 @@
   <!-- ------------------------------------Head------------------------------------ -->
   <!-- ---------------------------------------------------------------------------- -->
   <head>
+    <!-- Connect javascript functions and setup page-->
+    <script type="text/javascript" src="/functions.js"></script>
+    <script> window.addEventListener('load', function() {loadPageDefualts();}); </script>
+
     <title>Evan Gray | KnightLight</title>
 
     <!-- Link to the external stylesheets -->
     <link rel="stylesheet" type="text/css" href="/projects/knightlight/knightLightStyles.css">
-    <link rel="stylesheet" type="text/css" href="/headerStyles.css">
-    <link rel="stylesheet" type="text/css" href="/footerStyles.css">
-    <link rel="stylesheet" type="text/css" href="/fonts.css">
-
-    <!-- Set icon -->
-    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
-
-    <!-- Connect javascript functions -->
-    <script type="text/javascript" src="/functions.js"></script>
-
-    <!-- Load footer into this file-->
-    <!-- Also Load code snippets on page load and run prettify on them -->
-    <script> 
-      window.onload = function() 
-      {
-        loadHTML('/footer.html');
-      }; 
-    </script>
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -36,21 +22,6 @@
   <!-- ---------------------------------------------------------------------------- -->
 
   <body>
-    <!-- ~~~~~~~~~~~Header~~~~~~~~~~~ -->
-    <div class = "header" style="background-color: black;">
-      <div class = "title">
-        Evan Gray       
-      </div>
-      <div class = "buttons">
-        <button class= " button" onclick = "window.location.href = '/'">Projects</button>
-        <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
-        <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
-        <button class= " button" onclick = "window.location.href = '/about/'">About</button>
-        <button class= " button" onclick = "scrollToFooter()">Contact</button>
-      </div>
-      <hr class="header-line">
-    </div>
-
     <!-- ~~~~~~~~~~~Code Sample~~~~~~~~~~~ -->
     <div class = "content">
       <div class = "mediaSection">
@@ -214,11 +185,6 @@
           <br /> 
         </p>
       </div>
-    </div>
-
-    <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="/footer.html">
-      <!--Footer will get autoloaded here :D -->
     </div>
   </body>
 </html>
