Made so screen is black when loading everything (cant see unfinished html or unloaded media)

--- a/projects/sprouttown/index.html
+++ b/projects/sprouttown/index.html
@@ -22,6 +22,7 @@
   <!-- ---------------------------------------------------------------------------- -->
 
   <body>
+    <div id="loading-overlay" style="position:fixed;top:0;left:0;width:100%;height:100%;background:black;z-index:9999;"></div>
     <!-- ~~~~~~~~~~~SproutTown~~~~~~~~~~~ -->
     <div class = "content">
       <img src="/media/CautionTape.png" alt="CautionTape">
