--- a/codesamples/opengl-computeshader/index.html
+++ b/codesamples/opengl-computeshader/index.html
@@ -28,6 +28,7 @@
   <!-- ---------------------------------------------------------------------------- -->
 
   <body>
+    <div id="loading-overlay" style="position:fixed;top:0;left:0;width:100%;height:100%;background:black;z-index:9999;"></div>
     <!-- ~~~~~~~~~~~Tabs~~~~~~~~~~ -->
     <div class = "tabrow">
       <button class = "tab" onclick = "location.reload()">
