--- a/resume/index.html
+++ b/resume/index.html
@@ -22,6 +22,7 @@
   <!-- ---------------------------------------------------------------------------- -->
 
   <body>
+    <div id="loading-overlay" style="position:fixed;top:0;left:0;width:100%;height:100%;background:black;z-index:9999;"></div>
     <!-- ~~~~~~~~~~~Resume~~~~~~~~~~~ -->
     <div class = "resume">
       <iframe src="../media/EvanGrayResume.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
