Started Showcase Page

--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
     Evan Gray       
   </div>
   <div class = "buttons">
+    <button class="button" onclick="navigateOrReload('/showcase')">Showcase</button>
     <button class="button" onclick="navigateOrReload('/projects')">Projects</button>
     <button class="button" onclick="navigateOrReload('/resume/')">Resume</button>
     <button class="button" onclick="navigateOrReload('/codesamples/')">Code Samples</button>
