--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 <script>
   //Redirect to the projects page
-  window.location.href = "../projects";
+  window.location.href = "../showcase";
 </script>
