Improved text throughout, Made simple sprout town page, worked on showcase formating

--- a/codesamples/opengl-computeshader/index.html
+++ b/codesamples/opengl-computeshader/index.html
@@ -46,11 +46,11 @@
           <h1>Vulkan Compute Pipeline</h1>
         </div>
       </button>
-      <button class = "tabinactive" onclick = "window.location.href = '/codesamples/bst-map'">
+      <!-- <button class = "tabinactive" onclick = "window.location.href = '/codesamples/bst-map'">
         <div class = "codeTitle">
           <h1>Binary Search Tree Map</h1>
         </div>
-      </button>
+      </button> -->
     </div>
     <hr style="width: 96.9%; margin-top: 0; margin-bottom: -0.2vh; margin-left: 1.5vw;">
 
@@ -61,43 +61,13 @@
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code provides an abstraction layer for OpenGL compute shaders, allowing for their creation, management and execution. This implementation manages resources like buffers, textures and uniforms, providing efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, handle GPU memory and data binding efficiently.</p>
+<p>This code provides an abstraction layer for OpenGL compute shaders, allowing for their creation, management and execution. This implementation manages the compute shader's resources (buffers, textures and uniforms) automatically, allowing for easy shader creation and utilization. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, handle GPU memory and data binding.</p>
 
 
 <h2>Showcase Purpose:</h2>
 <p>This demonstrates my experience in writing code utilizing the OpenGL API, in this case specifically compute shaders.</p>
-<p>My ability to design efficient and developer-friendly solutions is highlighted in this code sample. Including uniform location/data cashing that minimizes GPU communication and error handling to catch issues early.</p>
-<p>This also shows my ability to abstract complicated systems, simplifing their usage and enhancing overall code maintainability.</p>
-
-<h2>Details:</h2>
-<p>Input Processing:</p>
-<div class="inset">
-<p>The constructor of the ComputeShader class reads the shader source code from a file and compiles it into a program. The <code>ParseShader()</code> function is responsible for reading the file and returning the shader source code as a string.</p>
-<p>The shader code is then passed to <code>CreateShader()</code>, which compiles the shader and links it into a program.</p>
-</div>
-<p>Shader Dispatching:</p>
-<div class="inset">
-<p>The <code>Dispatch()</code> function sends the compute shader to the GPU for execution, specifying the workgroup size and whether a memory barrier is needed.</p>
-<p>The <code>Bind()</code> and <code>Unbind()</code> functions manage the shader program during the execution, ensuring it is used when needed and releasing it afterward.</p>
-</div>
-<p>Buffer and Texture Management:</p>
-<div class="inset">
-<p>The <code>BindTexture()</code> function binds textures to the compute shader, enabling the shader to read from it.</p>
-<p>The <code>GenBuffer()</code> function creates a new buffer on the GPU, and BindBuffer is used to upload data to that buffer and bind it for use in the shader.</p>
-<p>The <code>ReadBuffer()</code> function allows reading the results of a compute shader from a buffer after execution.</p>
-<p>The <code>DeleteBuffer()</code> function allows buffers to be cleaned up when no longer needed.</p>
-</div>
-<p>Uniform Management:</p>
-<div class="inset">
-<p>The <code>SetUniform()</code> functions handle setting various types of uniforms by checking if the uniform data needs updating and then sending it to the GPU.</p>
-<p>The <code>GetUniformLocation()</code> function retrieves the location of a uniform in the shader program, caching it for efficiency.</p>
-<p>Additionally <code>checkUniformMap()</code> ensure that uniforms are only updated when their values change, which prevents unnecessary GPU communication and improves performance.</p>
-</div>
-<p>Error Handling and Debugging:</p>
-<div class="inset">
-<p>The code includes error handling, especially during shader compilation and linking. If errors occur detailed messages are logged.</p>
-<p>When this code is run in Visual Studio's debug mode, the shader compilation and program linking processes are carefully checked and failure logs are produced with specific error messages.</p>
-</div>
+<p>My ability to create developer friendly solutions to technical problems is highlighted in this sample. Though features like uniform location/data cashing that minimizes GPU communication and error handling to catch issues early.</p>
+<p>This also shows my ability to abstract complicated systems, simplifying their usage and improving overall code maintainability.</p>
        </div>
     </div>
   </body>
