--- a/contact/index.html
+++ b/contact/index.html
@@ -11,10 +11,10 @@
     <script type="text/javascript" src="/functions.js"></script>
     <script> window.addEventListener('load', function() {loadPageDefualts(false);}); </script>
 
-    <title>Evan Gray | About</title>
+    <title>Evan Gray | Contact</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="aboutStyles.css">
+    <link rel="stylesheet" type="text/css" href="contactStyles.css">
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -42,10 +42,9 @@
       </div>
       <div class = "aboutText">
 <p>I am currently pursuing a Bachelor of Science in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology.</p>
-<p>I am deeply interested in computer graphics, with in-depth experience in Vulkan and OpenGL, and passionate about building high-performance, visually stunning graphics systems and tools. My academic journey and project experience have equipped me with strong skills in rendering techniques, shader programming, and real-time interactive systems. I enjoy the challenge of optimizing complex graphics processes to bring creative and technical visions to life.</p> 
-<p>In addition, I have consistently achieved the Dean's List throughout DigiPen's challenging course load, reflecting my commitment to academic excellence and passion for the software development industry.</p>       
-<p>Beyond my technical skills, I am a proactive team member who values collaboration, as demonstrated in my experience managing teams to meet project milestones on time. With experience in professional project management frameworks like Scrum, I am well-prepared to contribute effectively and seamlessly within any team environment.</p>       
-<p>Looking ahead, my goal is to join the software development industry as a graphics programmer, where I can contribute to your cutting-edge project. I am eager to work with innovative teams that push the boundaries of what’s possible in graphics, where I can continue refining my skills and make a meaningful impact in this dynamic field.</p>
+<p>I am deeply interested in computer graphics, with in-depth experience in Vulkan and OpenGL, and passionate about building high-performance, visually impressive graphics systems. My academic journey and project experience have equipped me with skills in rendering techniques, shader programming, and real-time interactive systems. I enjoy the challenge of optimizing complex graphics processes to bring creative and technical ideas to life.</p> 
+<p>I have consistently achieved the Dean's List throughout DigiPen's challenging course load, holding a GPA of 3.99. This reflects my commitment to academic excellence and passion for the software development industry.</p>       
+<p>Beyond my technical skills, I am a proactive team member who values collaboration, as demonstrated in my experience working on multidisciplinary teams. With experience in professional project management frameworks like Scrum, I am well-prepared to contribute effectively and seamlessly within any team environment.</p> 
       </div>
     </div>
   </body>
