--- a/header.html
+++ b/header.html
@@ -2,14 +2,14 @@
 
 <div class = "header">
   <div class = "title">
-    Evan Gray       
+    Evan Gray | Graphics Programmer      
   </div>
   <div class = "buttons">
     <button class="button" onclick="navigateOrReload('/showcase')">Showcase</button>
     <button class="button" onclick="navigateOrReload('/projects')">Projects</button>
     <button class="button" onclick="navigateOrReload('/resume/')">Resume</button>
     <button class="button" onclick="navigateOrReload('/codesamples/')">Code Samples</button>
-    <button class="button" onclick="navigateOrReload('/about/')">Contact</button>
+    <button class="button" onclick="navigateOrReload('/contact/')">Contact</button>
     <!--button class= " button" onclick = "highlightInfo()">Contact</button-->
   </div>
 </div>
