--- a/projects/sprouttown/index.html
+++ b/projects/sprouttown/index.html
@@ -1,5 +1,5 @@
 <!--__________________________________________________________________________________________________________-->
-<!--______________________________________________SproutTown PAGE_____________________________________________-->
+<!--_____________________________________________Sprout Town PAGE_____________________________________________-->
 <!--__________________________________________________________________________________________________________-->
 <!DOCTYPE html>
 <html> 
@@ -14,7 +14,7 @@
     <title>Evan Gray | Sprout Town</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="sproutTownStyles.css">
+    <link rel="stylesheet" type="text/css" href="/projects/sprouttown/sproutTownStyles.css">
   </head>
 
   <!-- ---------------------------------------------------------------------------- -->
@@ -23,11 +23,54 @@
 
   <body>
     <div id="loading-overlay" style="position:fixed;top:0;left:0;width:100%;height:100%;background:black;z-index:9999;"></div>
-    <!-- ~~~~~~~~~~~SproutTown~~~~~~~~~~~ -->
+    <!-- ~~~~~~~~~~~Code Sample~~~~~~~~~~~ -->
     <div class = "content">
-      <img src="/media/CautionTape.png" alt="CautionTape">
-      <img src="/media/CautionTape.png" alt="CautionTape">
-      <div class="textoverlay"><p>UNDER&nbsp CONSTRUCTION</p></div>
+      <div class = "mediaSection">
+        <div class = "media">
+          <iframe width="100%" height="365" src="https://www.youtube.com/embed/E4fmCZ3ykm4"> </iframe>
+          <p></p>
+          <iframe frameborder="0" src="https://itch.io/embed/1442662?border_width=2&amp;bg_color=222222&amp;fg_color=eeeeee&amp;border_color=363636" width="554" height="169"><a href="https://basmatisoftware.itch.io/sprouttown">Sprout Town by basmatisoftware, TheCabbageKnight, HungryWolf1, oliviacampanario, AdamBucket</a></iframe>
+          <p><br /></p>
+          <img src = "/media/SproutTownItch1.png" alt = "Sprout Town screenshot" class = "mediaImage">
+          <img src = "/media/SproutTownItch2.png" alt = "Sprout Town screenshot" class = "mediaImage">
+          <img src = "/media/SproutTownItch3.png" alt = "Sprout Town screenshot" class = "mediaImage">
+          <img src = "/media/SproutTownItch4.png" alt = "Sprout Town screenshot" class = "mediaImage">
+        </div>
+      </div>
+
+      <div class = "gameDescription">
+        <h1>Sprout Town</h1>
+        <div class = "Intro">
+          <p>
+            <br /> 
+            <span class = "bold">Role:</span>
+            Lead Programmer 
+          </p>
+          <p>
+            <span class = "bold">Project Goals:</span> 
+            Build an engaging RTS experience within the Unity engine alongside a multidisciplinary team of artists and designers. With a focus on creating city building mechanics 
+            and visual effects. <br /> 
+            <br /> 
+          </p>      
+          <hr>
+        </div>
+        <div class = "Context">
+          <h2>Project Overview</h2>
+          <p>
+            <br /> 
+            <span class = "italics">Sprout Town</span> 
+            is a 2D top-down real time strategy card game where you build a beautiful community of sprout people surviving in a harsh garden land. Wanting to mix city building
+            mechanics with a more traditional RTS experience lead to the creation of this unique game.
+            <br />
+            <br />
+            This project was developed during my time at Sno-Isle Tech and was submitted to the 2022 AMES Showcase. A state wide competition between other students in Washington, 
+            where it was awarded second place.
+            <br />
+            <br />
+            <span class = "italics">Sprout Town</span> is available on Itch.io! I'd love for you to give it a try and build your own Sprout Town! <br /> 
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
