--- a/showcase/index.html
+++ b/showcase/index.html
@@ -24,27 +24,34 @@
     <div id="loading-overlay" style="position:fixed;top:0;left:0;width:100%;height:100%;background:black;z-index:9999;"></div>
 
     <div class="projects">
-      <!-- Project 1 -->
+      <!-- RayTracer -->
       <div class="project">
         <div class="project-video videoContainer">
           <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 1 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
-          <h2>Project Title 1</h2>
+          <h2>Real-Time Hardware Accelerated Raytracing in Vulkan</h2>
+          <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
+      
           <p>This project showcases [brief description]. The goal was to [state goal] and I implemented [key techniques or features].</p>
         </div>
       </div>
 
+      <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(128, 128, 128);">
+      
       <!-- Project 2 (reverse layout) -->
       <div class="project reverse">
         <div class="project-video videoContainer">
           <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 2 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
-          <h2>Project Title 2</h2>
+          <h2>Dynamically Deformable Heightmap via Tessellation Shader in Vulkan</h2>
+          <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
           <p>This project demonstrates [description]. Key highlights include [techniques, tools, or features].</p>
         </div>
       </div>
+
+       <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(128, 128, 128);">
 
       <!-- Project 3 -->
       <div class="project">
@@ -52,7 +59,8 @@
           <iframe src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Project 3 Video" allowfullscreen></iframe>
         </div>
         <div class="project-text content">
-          <h2>Project Title 3</h2>
+          <h2>Custom 2D Shadow Casting via Compute Shaders in OpenGL</h2>
+          <hr class="line" style="width: 100%; margin: 0 auto; height: 0.2vh; border: none; background-color: rgb(64, 64, 64);">
           <p>Describe your project here with what it achieved, challenges you overcame, and technologies used.</p>
         </div>
       </div>
